Fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@ h2 {
     position: relative;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 
 }
 
